Sat, 02 Feb 2008 11:33:48 +0100 <thp@perli.net>
Pressing Enter in the add channel entry adds the channel

	* data/gpodder.glade: Usability patch from Nikosapi <nikosapi.org>:
	Add an action handler to the gladefile, so the user can simply press
	Enter in the gtk.Entry instead of having to tab to or click on the
	button for adding a channel

Wed, 30 Jan 2008 09:47:21 +0100 <thp@perli.net>
Fix another bug in file_modification_datetime

	* src/gpodder/util.py: Another problem that happens with special
	iTunesDB settings, thanks to FriedBunny <friedbunny@kulturny.com>

Wed, 30 Jan 2008 09:23:19 +0100 <thp@perli.net>
Fix a bug in the file size calculation

	* src/gpodder/util.py: calculate_filesize should deal with "None"
	passed as filename (now returns zero-size);
	Fixes: Bug #23 (http://gpodder.thegithouse.com/show_bug.cgi?id=23)
	Thanks to FriedBunny <friedbunny@kulturny.com> for reporting this
	issue in our bug tracker

Mon, 28 Jan 2008 12:33:13 +0100 <thp@perli.net>
Merge new sync code from thp's private branch

	* bin/gpodder: Add "--sync"/"-s" command-line option to start the
	device synchronization process from the CLI interface - syncing can
	now be scripted, baby :) (you still have to configure the sync device
	via the GUI first, though)
	* data/gpodder.glade: Simplify gPodderSync dialog and remove some
	obsolete options from the channel dialog
	* src/gpodder/console.py: Add code for command-line sync support
	* src/gpodder/gui.py: Remove obsolete code for libipodsync and import
	the new "sync" module; simplify Sync<->GUI interface; clean-up
	gPodderSync dialog code to interface with new sync code; remove some
	config glue code for the channel properties dialog
	* src/gpodder/libconverter.py: Make libconverter work even if the
	percentage callback would fail in certain conditions (try..except)
	* src/gpodder/libipodsync.py: Removed
	* src/gpodder/libpodcasts.py: Refactor age_in_days() and
	get_age_string() to simple calls to utility functions and move the